# 91126800_ML_and_associated_tech

./: 404.html  Dockerfile  README.md  book.toml  index.html  mermaid-init.js  print.html  pyproject.toml  searchindex.js  searchindex.json
.github/workflows/: deploy.yml
book/: 404.html  index.html  mermaid-init.js  print.html  searchindex.js  searchindex.json
book/case_study/bash_scripts/: train_model.sh
book/case_study/training_scripts/: train_model.py
book/content/: Acronyms.html  acknowledgments.html  chapter_0_introduction.html  chapter_1_hpc.html  chapter_2_Containers.html  chapter_3_FileSystem.html  chapter_4_Templates.html
case_study/training_scripts/: get_stats.py
content/: Acronyms.html  acknowledgments.html  chapter_2_Containers.html  chapter_3_FileSystem.html  chapter_4_Templates.html
content/chapter_1/: 0_introduction_to_hpc.html  1_introduction_to_sigma2.html  2_navigating_in_hpc.html  3_job_script.html
content/chapter_2/: 0_introduction_containers.html  1_singularity.html  2_using_ingularity.html  2_using_singularity.html
content/chapter_3/: 0_introduction.html  1_copying.html  2_filesystem.html
content/chapter_4/: 0_introduction.html  1_setup_env.html  2_train_locally.html  3_train_sigma2.html
content/chapter_5/: 0_introduction.html  1_parallelising_workflow.html  1_ray_tune.html  2_ray_tune.html
src/: 1_singularity.md  README.md  SUMMARY.md
src/content/: Acronyms.md  acknowledgments.md  chapter_1_hpc.md  chapter_3_FileSystem.md  chapter_4_Templates.md
src/content/chapter_3/: 1_copying.md  (+2 more)
src/templates/: WORKFLOW_EXPLAINED.md
(+35 files in other folders)
